--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <h3 class="mb-0">Twitter Bot Detection</h3>
                             <div class="subheading mb-3">Big Data | Supervised Learning, Spark ML, Kafka, MongoDB</div>
                             <p> Built a machine learning model on a big data scale (accuracy of 91%) on Spark ML, MongoDB and Kafka to identify Twitter bots that spread political propaganda.
-                            <a href="https://github.com/im-vaibhav/Twitter-Bot-Detection" target="_blank" style="color:#a7142d;">[Github]</a></p>
+                            <a href="https://github.com/im-vaibhav/Twitter-Bot-Detection" target="_blank" style="color:#DC143C;">[Github]</a></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Spring 2020</span></div>
                     </div>                    
@@ -156,7 +156,7 @@
                             <h3 class="mb-0">Intelligent System Design using Cloud</h3>
                             <div class="subheading mb-3">Cloud Computing | Amazon Sagemaker, AWS S3, AWS Lambda, AWS SES, Amazon CloudFormation</div>
                             <p>Email Spam Detector is a serverless, microservice driven application, powered by a machine learning model to predict whether an email is spam or not. This system that upon receipt of an email message, automatically flag it as spam or not, based on the prediction obtained from the ML model. And it replies back to the sender of the email with a reasonable prediction.
-                                <a href="https://github.com/im-vaibhav/Intelligent-System-Design-using-Cloud" target="_blank" style="color:#a7142d;">[Github]</a>
+                                <a href="https://github.com/im-vaibhav/Intelligent-System-Design-using-Cloud" target="_blank" style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Spring 2020</span></div>
@@ -166,7 +166,7 @@
                             <h3 class="mb-0">NLP Powered Photo Album Search</h3>
                             <div class="subheading mb-3">Cloud Computing | AWS Transcribe, VPC, ElasticSearch, AWS Lex, AWS Rekognition, CloudWatch</div>
                             <p>Voice Based Photo Album Search is a serverless, microservice driven web-based application, that can be searched using natural language through both text and voice. We can upload photos and search then similar to a image search engine.
-                                <a href="https://github.com/im-vaibhav/NLP-Powered-Photo-Search" target="_blank" style="color:#a7142d;">[Github]</a>
+                                <a href="https://github.com/im-vaibhav/NLP-Powered-Photo-Search" target="_blank" style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Spring 2020</span></div>
@@ -176,7 +176,7 @@
                             <h3 class="mb-0">SMART DOOR AUTHENTICATION SYSTEM</h3>
                             <div class="subheading mb-3">Cloud Computing | Amazon Kinesis Stream, Amazon Rekoginition, Serverless, DynamoDB</div>
                             <p>Smart-Door-Authentication-System is a serverless, microservice driven web-based application. It builds a distributed system that authenticates people and provides them with access to a virtual door.
-                                <a href="https://github.com/im-vaibhav/Smart-Door-Authentication-System" target="_blank" style="color:#a7142d;">[Github]</a>
+                                <a href="https://github.com/im-vaibhav/Smart-Door-Authentication-System" target="_blank" style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Spring 2020</span></div>
@@ -186,7 +186,7 @@
                             <h3 class="mb-0">Dining Concierge Chatbot</h3>
                             <div class="subheading mb-3">Cloud Computing | AWS Lex, S3, API-Gateway, Lambda, Cognito Elastic Search</div>
                             <p>Dining Concierge Chatbot is a serverless, microservice driven web-based application. It is an intelligent natural language powered chat-bot that can help you provide restaurant suggestions based on your requirements such as - City, Time, Number of people, Cuisine Type and Date.
-                                <!-- <a href="#" target="_blank" style="color:#a7142d;">[Github]</a> -->
+                                <!-- <a href="#" target="_blank" style="color:#DC143C;">[Github]</a> -->
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Spring 2020</span></div>
@@ -198,7 +198,7 @@
                             <h3 class="mb-0">Database Designing</h3>
                             <div class="subheading mb-3">Database Systems | MySQL</div>
                             <p>Designed the schema and created a normalized apartments database with 5 tables linked together using keys.
-                                <a href="https://github.com/im-vaibhav/Apartment-Database-Porject" target="_blank" style="color:#a7142d;">[Github]</a>
+                                <a href="https://github.com/im-vaibhav/Apartment-Database-Porject" target="_blank" style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Spring 2020</span></div>
@@ -209,7 +209,7 @@
                             <h3 class="mb-0">Unix Shell</h3>
                             <div class="subheading mb-3">Operating System | C, Assembly, XV6</div>
                             <p>Implemented my own Shell from scratch in XV6 operating system using UNIX system calls as a part of Operating Systems course at New York University. Command execution, I/O Redirection and Pipelining.
-                                <a href="https://github.com/im-vaibhav/UnixShell" target="_blank" style="color:#a7142d;">[Github]</a>
+                                <a href="https://github.com/im-vaibhav/UnixShell" target="_blank" style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Fall 2019</span></div>
@@ -220,7 +220,7 @@
                             <h3 class="mb-0">Lottery Scheduler</h3>
                             <div class="subheading mb-3">Operating System | C, Assembly, XV6</div>
                             <p>Implemented and Tested lottery scheduling, a randomized algorithm that allows processes to receive a proportional share of the CPU without explicitly tracking how long each process has been run.
-                                <a href="https://github.com/im-vaibhav/xv6-LotterScheduler" target="_blank" style="color:#a7142d;">[Github]</a>
+                                <a href="https://github.com/im-vaibhav/xv6-LotterScheduler" target="_blank" style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Fall 2019</span></div>
@@ -230,7 +230,7 @@
                             <h3 class="mb-0">Automated clustering of Research Papers</h3>
                             <div class="subheading mb-3">Machine Learning | Unsupervised Learning, Hierarchical Clustering, Girvan-Newman Clustering</div>
                             <p>AAAI wants an automated unsupervised script to group research documents into different clusters, so that all papers having similar high-level domains will be grouped together.
-                                <a href="https://github.com/im-vaibhav/ML-Assignments-CS60050/tree/master/15CE10057_ML_A3" target="_blank" style="color:#a7142d;">[Github]</a>
+                                <a href="https://github.com/im-vaibhav/ML-Assignments-CS60050/tree/master/15CE10057_ML_A3" target="_blank" style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Spring 2019</span></div>
@@ -240,7 +240,7 @@
                             <h3 class="mb-0">Stance detection from tweets</h3>
                             <div class="subheading mb-3">Natural Language Processing | TF-IDF, Naive Bayes, SVM, Decision Tree and LSTM</div>
                             <p>The project aims at identifying different stances adopted by the people, concerning various aspects of cancer (such as lethality, prevention, causes, etc) from an extensive collection of tweets.
-                                <a href="https://github.com/im-vaibhav/Stance-Detection-From-Tweets" target="_blank" style="color:#a7142d;">[Github]</a>
+                                <a href="https://github.com/im-vaibhav/Stance-Detection-From-Tweets" target="_blank" style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Fall 2018</span></div>
@@ -250,7 +250,7 @@
                             <h3 class="mb-0">Post OCR Processing</h3>
                             <div class="subheading mb-3">Natural Langauge Processing | Language Models, Neural Nets</div>
                             <p>Designed an algorithm for word corrections of post OCR Sanskrit scripts through statistical language models using edit distance on a known dictionary. Improved the accuracy of the algorithm up by 10%, by introducing morphological language constraints from the grammar, using Sandhi.
-                                <a href="https://github.com/im-vaibhav/Post-OCR-Processing" target="_blank" style="color:#a7142d;">[Github]</a>
+                                <a href="https://github.com/im-vaibhav/Post-OCR-Processing" target="_blank" style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Fall 2017</span></div>
@@ -260,7 +260,7 @@
                             <h3 class="mb-0">Android Apps</h3>
                             <div class="subheading mb-3">Android Development | Java, XML</div>
                             <p>Worked on number of projects while completing the Android Development Course on Udacity placed by Google. Developed variety of apps that uses basic android concepts of user interface and user inputs.
-                                <a href="https://github.com/im-vaibhav/Android" target="_blank" style="color:#a7142d;">[Github]</a>
+                                <a href="https://github.com/im-vaibhav/Android" target="_blank" style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2017 - 2018</span></div>
@@ -347,7 +347,7 @@
                                 Published in the <a href="https://www.jstage.jst.go.jp/browse/-char/en" target="_blank">Journal of the Eastern Asia Society for Transportation Studies</a>, 2019 Volume 13 Pages 2614-2629. 
                                 <br><br><b>Keywords</b>: Crash severity, Data Mining, Traffic Crashes, XGBoost
                                 <!-- ;<a href=""><u>Cited by 0</u></a>  -->
-                                <a href="https://doi.org/10.11175/easts.13.2614" target="_blank" style="color:#a7142d;">[PDF]</a>
+                                <a href="https://doi.org/10.11175/easts.13.2614" target="_blank" style="color:#DC143C;">[PDF]</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Dec 2019</span></div>
@@ -360,7 +360,7 @@
                             <p>                                
                                 Presented at the <a href="https://wsc.ubcsanskrit.ca/ocs/wsc/2018" target="_blank">17th World Sanskrit Conference</a> at Vancouver Canada in July 2018. 
                                 <br><br><b>Keywords</b>: OCR, Deep Learning, NLP, Attention Models; <a href="https://scholar.google.com/scholar?oi=bibs&hl=en&cites=263963061334516867"><u>Cited by 3</u></a>
-                                <a href="https://www.cse.iitb.ac.in/~ganesh/papers/wsc2018.pdf" target="_blank" style="color:#a7142d;"> [PDF]</a>
+                                <a href="https://www.cse.iitb.ac.in/~ganesh/papers/wsc2018.pdf" target="_blank" style="color:#DC143C;"> [PDF]</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2018</span></div>
