--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             <h3 class="mb-0">Dining Concierge Chatbot</h3>
                             <div class="subheading mb-3">Cloud Computing | AWS Lex, S3, API-Gateway, Lambda, Cognito Elastic Search</div>
                             <p>Dining Concierge Chatbot is a serverless, microservice driven web-based application. It is an intelligent natural language powered chat-bot that can help you provide restaurant suggestions based on your requirements such as - City, Time, Number of people, Cuisine Type and Date.
-                                <!-- <a href="#" target="_blank" style="color:#DC143C;">[Github]</a> -->
+                                <a href="#" target="_blank" style="color:#DC143C;">[Github]</a>
                             </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Spring 2020</span></div>
