--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                             <div class="subheading mb-3"><b>Vaibhav Agrawal</b>, Sudipa Chatterjee, Sudeshna Mitra</div>
                             <p>
                                 Published in the <a href="https://www.jstage.jst.go.jp/browse/-char/en" target="_blank">Journal of the Eastern Asia Society for Transportation Studies</a>, 2019 Volume 13 Pages 2614-2629. 
-                                <br><br><b>Keywords</b>: Crash severity, Data Mining, Traffic Crashes, XGBoost;
+                                <br><br><b>Keywords</b>: Crash severity, Data Mining, Traffic Crashes, XGBoost
                                 <!-- ;<a href=""><u>Cited by 0</u></a>  -->
                                 <a href="https://doi.org/10.11175/easts.13.2614" target="_blank" style="color:#DC143C;">[PDF]</a>
                             </p>
