--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <span class="text-primary">Agrawal</span>
                     </h1>
                     <div class="subheading mb-5">
-                        New York, NY 11218 · (631) 552-8406 ·
+                        New York City, US 11218 · (631) 552-8406 ·
                         <a href="mailto:va1019@nyu.edu">va1019@nyu.edu</a>
                         <br />
                         <br />
