--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                             <h3 class="mb-0">New York University</h3>
                             <div class="subheading mb-3">MS in Computer Science</div>
                             <p>GPA: 3.83/4</p>
-                            <p>Design and Analysis of Algorithms, Operating Systems, Database Management Systems, Cloud Computing, Information Visualization, Deep Learning, Java - Special Topics, Big Data, DevOps</p>
+                            <p>Design and Analysis of Algorithms, Operating Systems, Computer Networking, Database Management Systems, Java - Special Topics, Big Data, Cloud Computing, Deep Learning, Application Security</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept 2019 - Dec 2020 (Expected)</span></div>
                     </div>
