--- a/index.html
+++ b/index.html
@@ -48,20 +48,22 @@
                         <span class="text-primary">Agrawal</span>
                     </h1>
                     <div class="subheading mb-5">
-                        New York City, US 11218 · (631) 552-8406 ·
-                        <a href="mailto:va1019@nyu.edu">va1019@nyu.edu</a>
+                        San Francisco, CA 94104 · (631) 552-8406 ·
+                        <a href="mailto:va8817@gmail.com">va8817@gmail.com</a>
                         <br />
                         <br />
                         Living the dream!
                     </div>
-                    <p class="lead mb-5">My name is Vaibhav.  I  ♥  to code!!
+                    <p class="lead mb-5">My name is Vaibhav.  I  ♥  to code!! 
 
-                        I am a computer science enthusiast. I am a CS grad student at New York University.
+                        I am a Software Developer Engineer at Twitch Interactive, Inc.
+
+                        I am a computer science enthusiast. I hold a Master of Science in Computer Science from New York University.                
                        
                        I did my undergrad at Indian Institute of Technology Kharagpur.  I graduated with a major in Civil Engineering and a minor in Computer Science and Engineering. Through my journey at IIT KGP, I found my interest in computer science which has led me to pursue my advanced study in CS. 
                        
                        I do a lot of data science and machine learning related projects and research work, that can be found in my GitHub. I also participate in programming contests at Codechef and LeetCode. 
-                    <br><br> <u>I am graduating with MS in CS from NYU in Dec 2020 and seeking a new grad Software Engineering / Machine Learning role starting Jan 2021.</u> Please feel free to reach out to me!</p>
+                    <br><br> <u>Please feel free to reach out to me for referral request or just to have a chat about new technology!</u></p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/iamvaibhav/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/im-vaibhav"><i class="fab fa-github"></i></a>
@@ -79,11 +81,20 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Software Developer Engineer</h3>
+                            <div class="subheading mb-3"><img alt src="/assets/img/twitch.png" style="max-height: 35px;"> Twitch Inc.</div>
+                            <p>SDE-1 with Commerce Team <i></i></p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Software Developer (Django, React.js, SQL)</h3>
                             <div class="subheading mb-3"><img alt src = "/assets/img/nyu.jpg" style="max-height: 35px;">  FITL, New York University</div>
                             <p>Building a RESTful API driven web app to manage the undergraduate tutoring program with a dedicated algorithm for matching students and tutors into individual and shared tutoring sessions. <i></i></p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Oct 2019 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Oct 2019 - Dec 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -120,7 +131,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">New York University</h3>
                             <div class="subheading mb-3">MS in Computer Science</div>
-                            <p>GPA: 3.83/4</p>
+                            <p>GPA: 3.85/4</p>
                             <p>Design and Analysis of Algorithms, Operating Systems, Computer Networking, Database Management Systems, Java - Special Topics, Big Data, Cloud Computing, Deep Learning, Application Security</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept 2019 - Dec 2020 (Expected)</span></div>
