--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                     <p class="lead mb-5">My name is Vaibhav.  I  ♥  to code!! 
 
-                        I am a Software Developer Engineer at Twitch Interactive, Inc.
+                        I am a Software Engineer at Twitch Interactive, Inc.
 
                         I am a computer science enthusiast. I hold a Master of Science in Computer Science from New York University.                
                        
