--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Developer Engineer</h3>
-                            <div class="subheading mb-3"><img alt src="/assets/img/twitch.png" style="max-height: 35px;"> Twitch Interactive, Inc.</div>
+                            <div class="subheading mb-3"><img alt src="/assets/img/twitch.png" style="max-height: 35px;"> Twitch Inc.</div>
                             <p>SDE-1 with Commerce Team <i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
