--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <p>GPA: 3.85/4</p>
                             <p>Design and Analysis of Algorithms, Operating Systems, Computer Networking, Database Management Systems, Java - Special Topics, Big Data, Cloud Computing, Deep Learning, Application Security</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">Sept 2019 - Dec 2020 (Expected)</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sept 2019 - Dec 2020</span></div>
                     </div>
                     <br>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
