--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="mailto:va8817@gmail.com">va8817@gmail.com</a>
                         <br />
                         <br />
-                        Living the dream!
+                        Aiming for the INFINITY!
                     </div>
                     <p class="lead mb-5">My name is Vaibhav.  I  ♥  to code!! 
 
