--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                                     target="_blank">Crash Severity Analysis Through Nonparametric Machine Learning Methods</a></h3>
                             <div class="subheading mb-3"><b>Vaibhav Agrawal</b>, Sudipa Chatterjee, Sudeshna Mitra</div>
                             <p>
-                                Published in the <a href="https://www.jstage.jst.go.jp/browse/-char/en" target="_blank">Journal of the Eastern Asia Society for Transportation Studies</a>, 2019 Volume 13 Pages 2614-2629. 
+                                Published in the <a href="https://trid.trb.org/view/1724852" target="_blank">Journal of the Eastern Asia Society for Transportation Studies</a>, 2019 Volume 13 Pages 2614-2629. 
                                 <br><br><b>Keywords</b>: Crash severity, Data Mining, Traffic Crashes, XGBoost; <a href="https://www.semanticscholar.org/paper/Crash-Severity-Analysis-Through-Nonparametric-Agrawal-Chatterjee/def52de96c24eb269bb401c505f0455542847ab4#citing-papers"><u>Cited by 1</u></a>
                                 <a href="https://doi.org/10.11175/easts.13.2614" target="_blank" style="color:#DC143C;">[PDF]</a>
                             </p>
