--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <span class="text-primary">Agrawal</span>
                     </h1>
                     <div class="subheading mb-5">
-                        San Francisco, CA 94104 · (628) 946-2052 ·
+                        San Francisco, CA 94108 ·
                         <a href="mailto:va8817@gmail.com">va8817@gmail.com</a>
                         <br />
                         <br />
@@ -56,7 +56,7 @@
                     </div>
                     <p class="lead mb-5">My name is Vaibhav.  I  ♥  to code!! 
 
-                        I am a Software Engineer at Twitch Interactive, Inc.
+                        I am a Software Engineer on Money Team at Twitch Interactive, Inc.
 
                         I am a computer science enthusiast. I hold a Master of Science in Computer Science from New York University.                
                        
@@ -83,7 +83,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer</h3>
                             <div class="subheading mb-3"><img alt src="/assets/img/twitch.png" style="max-height: 35px;"> Twitch Inc.</div>
-                            <p>SDE-1 with Commerce Team <i></i></p>
+                            <p>SDE-1 with Money Team. (Golang and Typescript)<i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
                     </div>
@@ -155,6 +155,7 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Over 5000 lines of code</div>
                     <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="devicon-go-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-cplusplus-plain"></i></li>
                         <li class="list-inline-item"><i class="devicon-java-plain-wordmark"></i></li>
                         <li class="list-inline-item"><i class="devicon-python-plain-wordmark"></i></li>
