--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer</h3>
                             <div class="subheading mb-3"><img alt src="/assets/img/twitch.png" style="max-height: 35px;"> Twitch Inc.</div>
-                            <p>SDE-1 with Money Team. (Golang and Typescript)<i></i></p>
+                            <p>SDE I on Money Team. (Golang and Typescript)<i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
                     </div>
