--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer</h3>
-                            <div class="subheading mb-3"><img alt src="/assets/img/twitch.jpg" style="max-height: 35px;"> Twitch Inc.</div>
+                            <div class="subheading mb-3"><img alt src="/assets/img/TwitchGlitchBlackOps.jpg" style="max-height: 35px;"> Twitch Inc.</div>
                             <p>SDE I on Money Team. (Golang and Typescript)<i></i></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
@@ -218,11 +218,11 @@
                     <h2 class="mb-5">Publications</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0"><a href="https://doi.org/10.11175/easts.13.2614"
+                            <h3 class="mb-0"><a href="https://trid.trb.org/view/1724852"
                                     target="_blank">Crash Severity Analysis Through Nonparametric Machine Learning Methods</a></h3>
                             <div class="subheading mb-3"><b>Vaibhav Agrawal</b>, Sudipa Chatterjee, Sudeshna Mitra</div>
                             <p>
-                                Published in the <a href="https://trid.trb.org/view/1724852" target="_blank">Journal of the Eastern Asia Society for Transportation Studies</a>, 2019 Volume 13 Pages 2614-2629. 
+                                Published in the <a href="https://www.jstage.jst.go.jp/browse/easts/" target="_blank">Journal of the Eastern Asia Society for Transportation Studies</a>, 2019 Volume 13 Pages 2614-2629. 
                                 <br><br><b>Keywords</b>: Crash severity, Data Mining, Traffic Crashes, XGBoost; <a href="https://www.semanticscholar.org/paper/Crash-Severity-Analysis-Through-Nonparametric-Agrawal-Chatterjee/def52de96c24eb269bb401c505f0455542847ab4#citing-papers"><u>Cited by 1</u></a>
                                 <a href="https://doi.org/10.11175/easts.13.2614" target="_blank" style="color:#DC143C;">[PDF]</a>
                             </p>
