--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Software Engineer</h3>
+                            <h3 class="mb-0">Software Development Engineer</h3>
                             <div class="subheading mb-3"><img alt src="/assets/img/twitch.jpg" style="max-height: 35px;">  Twitch Inc.</div>
                             <p>SDE I on Money Team. (Go and Typescript)<i></i></p>
                         </div>
@@ -98,7 +98,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">PM Intern</h3>
+                            <h3 class="mb-0">Product Manager Intern</h3>
                             <div class="subheading mb-3"><span  style="font-size: 1.1em; color:#1798c1;"><i class="fab fa-salesforce"></i></span>  Salesforce.com, San Francisco CA</div>
                             <p>Worked in Platform Standards Cloud on the core engineering productivity systems to help GUS users in efficient major release management.</p>
                         </div>
