--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Software Development Engineer</h3>
+                            <h3 class="mb-0">Software Developer Engineer</h3>
                             <div class="subheading mb-3"><img alt src="/assets/img/twitch.jpg" style="max-height: 32px;">  Twitch, San Francisco CA</div>
                             <p>SDE I on Money Team. (Go and Typescript)<i></i></p>
                         </div>
