--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Product Manager Intern</h3>
-                            <div class="subheading mb-3"> <img alt src = "/assets/img/salesforce.jpg" style="max-height: 35px;">  Salesforce.com, San Francisco CA</div>
+                            <div class="subheading mb-3"><span  style="font-size: 1.1em; color:#1798c1;"><i class="fab fa-salesforce"></i></span>  Salesforce.com, San Francisco CA</div>
                             <p>Worked in Platform Standards Cloud on the core engineering productivity systems to help GUS users in efficient major release management.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2020 - Aug 2020</span></div>
