--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Product Manager Intern</h3>
-                            <div class="subheading mb-3"><img alt src="/assets/img/salesforce.jpg" style="max-width: 35px;"> Salesforce.com, San Francisco CA</div>
+                            <div class="subheading mb-3"><span style="font-size: 1.1em; color:#1798c1;"><i class="fab fa-salesforce"></i></span> Salesforce.com, San Francisco CA</div>
                             <p>Worked in Platform Standards Cloud on the core engineering productivity systems to help GUS users in efficient major release management.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2020 - Aug 2020</span></div>
@@ -130,9 +130,9 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">New York University</h3>
-                            <div class="subheading mb-3">MS in Computer Science</div>
-                            <p>GPA: 3.85/4</p>
-                            <p>Design and Analysis of Algorithms, Operating Systems, Computer Networking, Database Management Systems, Java - Special Topics, Big Data, Cloud Computing, Deep Learning, Application Security</p>
+                            <div class="subheading mb-3"><a href="MS_diploma.png" target="_blank"> Master of Science in Computer Science</a></div>
+                            <p>GPA: 3.85/4 </p>
+                            <p>Design and Analysis of Algorithms, Operating Systems, Computer Networking, Database Management Systems, Java - Special Topics, Big Data, Cloud Computing, Deep Learning, Application Security</p>                            
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept 2019 - Dec 2020</span></div>
                     </div>
