--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
                        I do a lot of data science and machine learning related projects and research work, that can be found in my GitHub. I also participate in programming contests at Codechef and LeetCode. 
                     <br><br> <u>Please feel free to reach out to me for a referral request or just to have a chat about new technology!</u></p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/iamvaibhav/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/avaibh/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/im-vaibhav"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://scholar.google.com/citations?user=NY03MMQAAAAJ&hl=en" target="_blank" style="text-decoration: none;"><i class="ai ai-google-scholar"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/imvaibhav/"><i class="fab fa-instagram"></i></a>
+                        <a class="social-icon" href="https://twitch.tv/avaibh/"><i class="fab fa-twitch"></i></a>
                     </div>
                     <br>                    
                     <!-- <div class="resume-section-link text-md-center"><a href="Resume.pdf" target="_blank"><button type="button" class="btn btn-primary">Resume</button></a></div> -->
